<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">ni_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_masukkan_email">Masukkan email dan password untuk login.</string>
  <string name="lbl_logout">Logout</string>
  <string name="lbl_book">Book</string>
  <string name="lbl_baca_sekarang">Baca Sekarang</string>
  <string name="lbl_xxxx">xxxx</string>
  <string name="lbl_t">t.</string>
  <string name="lbl_3_jam">3 Jam</string>
  <string name="lbl_maling_kundang">Maling Kundang</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_masuk">Masuk</string>
  <string name="lbl_1_jam">1 Jam</string>
  <string name="lbl_hello_gmail_com">hello@gmail.com</string>
  <string name="lbl_dd_mm_yyyy">dd/mm/yyyy</string>
  <string name="msg_edit_profile_an2">Edit Profile Anakmu</string>
  <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
  <string name="msg_buku_yang_baru">Buku yang baru dibaca</string>
  <string name="lbl_level_bacaan">Level Bacaan</string>
  <string name="lbl_sign_in">Sign in </string>
  <string name="lbl_mulai_menonton">Mulai Menonton</string>
  <string name="lbl_akun_anak">Akun Anak</string>
  <string name="msg_kreator_cosmop">Kreator  Cosmopolite</string>
  <string name="msg_tambah_akun_ana">Tambah Akun Anak</string>
  <string name="lbl_buku">BUKU</string>
  <string name="msg_cth_saaxx_gma">cth : saaxx@gmail.com</string>
  <string name="lbl_nama_anak">Nama Anak</string>
  <string name="lbl_profile_lulu">Profile Lulu</string>
  <string name="msg_edit_profile_an">Edit Profile Anak</string>
  <string name="lbl_karya_xx">Karya xx</string>
  <string name="lbl_pesta_penulis">Pesta Penulis</string>
  <string name="lbl_kontak_kami">Kontak Kami</string>
  <string name="lbl_atau">atau</string>
  <string name="lbl_hapus_akun">Hapus Akun</string>
  <string name="lbl_gender">Gender</string>
  <string name="lbl_video">VIDEO</string>
  <string name="lbl_kata_sandi_baru">Kata sandi baru</string>
  <string name="lbl_perempuan">Perempuan</string>
  <string name="lbl_orang_tua">Orang Tua</string>
  <string name="lbl_anak_cerdas2">Anak Cerdas</string>
  <string name="lbl_kata_sandi_lama">Kata sandi lama</string>
  <string name="lbl_pengetauan_alam">Pengetauan Alam</string>
  <string name="msg_masukkan_kode_e">Masukkan kode empat digit yang telah dikirim ke email/nomor anda.</string>
  <string name="msg_saling_mengharg">Saling Menghargai</string>
  <string name="lbl_813_857_668">813-857-668</string>
  <string name="lbl_berikutnya">Berikutnya</string>
  <string name="lbl_cosmobook">Cosmobook</string>
  <string name="msg_hanya_di_cosmob">Hanya di Cosmobook</string>
  <string name="msg_dongeng_anak_nu">Dongeng Anak Nusantara</string>
  <string name="msg_informasi_priba2">Informasi Pribadi</string>
  <string name="msg_dukung_penulis">Dukung Penulis !!</string>
  <string name="msg_edit_kata_sandi">Edit Kata Sandimu</string>
  <string name="lbl_lulu">Lulu</string>
  <string name="lbl_langit_biru">LANGIT BIRU</string>
  <string name="lbl_buat_akun">Buat Akun</string>
  <string name="lbl_62_81354771356">+62 81354771356</string>
  <string name="msg_informasi_priba">Informasi pribadi</string>
  <string name="lbl_publikasi_karya">Publikasi Karya</string>
  <string name="msg_selamat_datang2">Selamat Datang !</string>
  <string name="msg_belum_punya_aku">
Belum Punya Akun?</string>
  <string name="msg_masukkan_email2">Masukkan email atau nomor telepon Anda, kami akan mengirimkan kode verifikasi untuk mengatur ulang kode sandi anda.</string>
  <string name="lbl_password">Password</string>
  <string name="msg_daftar_dengan_g">Daftar dengan Google</string>
  <string name="lbl_kata_kunci">Kata Kunci</string>
  <string name="lbl_anak_cerdas"> Anak Cerdas</string>
  <string name="lbl_profile_anak">Profile Anak</string>
  <string name="lbl_tanggal_lahir">Tanggal Lahir</string>
  <string name="lbl_syukur">Syukur</string>
  <string name="lbl_lili">Lili</string>
  <string name="lbl_laki_laki">Laki-laki</string>
  <string name="lbl_atau2">Atau</string>
  <string name="lbl_jenis_vidio">Jenis Vidio</string>
  <string name="msg_kontrol_orangtu">Kontrol Orangtua</string>
  <string name="lbl_nonton_sekarang">Nonton Sekarang</string>
  <string name="lbl_selanjutnya">Selanjutnya</string>
  <string name="msg_kontrol_orang_t">Kontrol Orang Tua</string>
  <string name="lbl_kirimkan_kode">Kirimkan Kode</string>
  <string name="lbl_lupa_password">Lupa Password?</string>
  <string name="lbl_lupa_password2">Lupa Password</string>
  <string name="msg_email">Email           : xxwulan@gmail.com
Instagram : @wulan_
Linkin           : wulan.linkin</string>
  <string name="msg_video_di_bulan">Video di bulan November</string>
  <string name="lbl_xxxxxxxx">xxxxxxxx</string>
  <string name="msg_setuju_syarat">Setuju syarat &amp; ketentuan</string>
  <string name="lbl_mudah">Mudah</string>
  <string name="lbl_asal_usul">Asal Usul</string>
  <string name="lbl_kata_sandi">Kata Sandi</string>
  <string name="msg_edit_informasi">Edit Informasi Pribadimu</string>
  <string name="msg_profile_orangtu">Profile Orangtua</string>
  <string name="msg_belum_punya_aku2">Belum Punya Akun?</string>
  <string name="lbl_sinta">sinta</string>
  <string name="lbl_10">10</string>
  <string name="lbl_nama">Nama</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
  <string name="lbl_publish_karya">Publish  Karya</string>
  <string name="msg_buat_kata_sandi">Buat Kata Sandi Baru</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_cermin_ajaib">Cermin Ajaib</string>
  <string name="lbl_hai_lulu">Hai Lulu..</string>
  <string name="lbl_30_menit">30 Menit</string>
  <string name="lbl_umur">Umur</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_nomor_hp">Nomor Hp</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_1">1</string>
  <string name="lbl_verifikasi_kode">Verifikasi Kode</string>
  <string name="lbl_7_tahun">7 tahun</string>
  <string name="msg_kontrol_pemakai">Kontrol Pemakaian Gadjet pada anak!!</string>
  <string name="lbl_whatsapp">WhatsApp</string>
  <string name="lbl_umur_anak">Umur Anak</string>
  <string name="lbl_6">6</string>
  <string name="lbl_avatar">Avatar</string>
  <string name="msg_langit_biru_a">Langit, Biru, Awan, Hujan, Mendung, Alam</string>
  <string name="lbl_lewati">Lewati</string>
  <string name="lbl_7">7</string>
  <string name="lbl_mulai_membaca">Mulai Membaca</string>
  <string name="lbl_animasi">Animasi</string>
  <string name="lbl_karya_wulan">Karya Wulan</string>
  <string name="lbl_dongeng">Dongeng</string>
  <string name="msg_reset_dengan_no">Reset dengan nomor telepon?</string>
  <string name="lbl_8">8</string>
  <string name="lbl_9">9</string>
  <string name="lbl_3_beruang">3 Beruang</string>
  <string name="lbl_id_62">ID +62</string>
  <string name="msg_sinta_gmail_co">sinta@gmail..com</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_keluaran">Keluaran</string>
  <string name="msg_jaga_keamanan_a">Jaga keamanan akun Anda dengan membuat kata sandi yang kuat.</string>
  <string name="msg_yuk_baca_buat">Yuk baca, buat, koleksi karya digital kamu</string>
  <string name="msg_buku_baru_terbi">Buku baru Terbit</string>
  <string name="lbl_simpan">Simpan</string>
  <string name="msg_kreator_cosmopo">Kreator Cosmopolite</string>
  <string name="msg_atur_ulang_sand">Atur Ulang Sandi</string>
  <string name="msg_jaga_keamanan_a2">Jaga keamanan akun Anda dengan membuat kata sandi yang kua</string>
  <string name="msg_simpan_perubaha">Simpan Perubahan</string>
  <string name="msg_membaca_di_bula">Membaca di bulan November</string>
  <string name="msg_video_yang_baru">Video yang baru ditonton</string>
  <string name="msg_ayuk_pusblish_k">Ayuk Pusblish Karyamu bersama Cosmopolite!</string>
  <string name="lbl_dukung_autor">Dukung Autor !!</string>
  <string name="lbl_tidak_ada">Tidak Ada</string>
  <string name="lbl_daftar">Daftar</string>
  <string name="msg_buat_profile_an">Buat Profile Anak</string>
  <string name="lbl_alamat_email">Alamat email</string>
  <string name="lbl_terbaru">Terbaru</string>
  <string name="lbl_alamat_email2">Alamat Email</string>
  <string name="lbl_umur_5_tahun">Umur 5 tahun</string>
  <string name="msg_selamat_datang">Selamat Datang Di</string>
  <string name="msg_reset_dengan_em">Reset dengan email?</string>
  <string name="lbl_katagori">Katagori</string>
  <string name="lbl_bookmark">BOOKMARK</string>
  <string name="lbl_akun">Akun</string>
  <string name="lbl_20_menit">20 Menit</string>
  <string name="lbl_2_jam">2 Jam</string>
  <string name="msg_keluaran_terbar">Keluaran Terbaru</string>
</resources>
