<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start" android:id="@+id/linearLogin"
                  android:layout_height="880dp"
                  android:layout_width="510dp"
                  android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowOne"
                   android:layout_height="@dimen/_2pxh"
                   android:layout_marginEnd="@dimen/_26pxh"
                   android:layout_marginStart="@dimen/_26pxh"
                   android:layout_marginTop="@dimen/_47pxv"
                   android:layout_width="@dimen/_15pxh"
                   android:scaleType="fitXY" android:src="@drawable/img_arrow1"
                   tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
        <TextView android:ellipsize="end"
                  android:id="@+id/txtSelamatDatang"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/_29pxh"
                  android:layout_marginStart="@dimen/_29pxh"
                  android:layout_marginTop="@dimen/_48pxv"
                  android:layout_width="match_parent"
                  android:lineSpacingExtra="@dimen/_12pxh"
                  android:singleLine="true"
                  android:text="@string/msg_selamat_datang2"
                  style="@style/txtPoppinsbold24" tools:text="@string/msg_selamat_datang2"/>
        <TextView android:ellipsize="end"
                  android:gravity="center_horizontal"
                  android:id="@+id/txtMasukkanemail"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/_26pxh"
                  android:layout_marginStart="@dimen/_26pxh"
                  android:layout_marginTop="@dimen/_14pxv"
                  android:layout_width="match_parent"
                  android:lineSpacingExtra="@dimen/_7pxh"
                  android:singleLine="true"
                  android:text="@string/msg_masukkan_email"
                  style="@style/txtPoppinsregular14" tools:text="@string/msg_masukkan_email"/>
        <TextView android:ellipsize="end"
                  android:id="@+id/txtAlamatemail"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/_29pxh"
                  android:layout_marginStart="@dimen/_29pxh"
                  android:layout_marginTop="@dimen/_14pxv"
                  android:layout_width="wrap_content"
                  android:lineSpacingExtra="@dimen/_8pxh"
                  android:singleLine="true"
                  android:text="@string/lbl_alamat_email"
                  style="@style/txtPoppinsbold16" tools:text="@string/lbl_alamat_email"/>
        <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_15"
                android:ellipsize="end"
                android:hint="@string/msg_cth_saaxx_gma"
                android:id="@+id/etGroupTwentyNine" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_15pxv" android:singleLine="true"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/_29pxh"
                  android:layout_marginStart="@dimen/_29pxh"
                  android:layout_marginTop="@dimen/_12pxv"
                  android:layout_width="wrap_content"
                  android:lineSpacingExtra="@dimen/_8pxh"
                  android:singleLine="true"
                  android:text="@string/lbl_password"
                  style="@style/txtPoppinsbold16" tools:text="@string/lbl_password"/>
        <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_15"
                android:drawableEnd="@drawable/img_visibilityoff"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end" android:hint="@string/lbl_xxxxxxxx"
                android:id="@+id/etPasswordOne" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_23pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_14pxv" android:singleLine="true"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="center_horizontal"
                      android:id="@+id/linearColumnmasuk"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="@dimen/_26pxh"
                      android:layout_marginStart="@dimen/_26pxh"
                      android:layout_marginTop="@dimen/_36pxv"
                      android:layout_width="match_parent"
                      android:orientation="vertical" style="@style/groupStylecornerRadius_3">
            <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnMasuk"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_masuk"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_masuk"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
                  android:id="@+id/txtLupaPassword"
                  android:layout_gravity="center_horizontal"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/_26pxh"
                  android:layout_marginStart="@dimen/_26pxh"
                  android:layout_marginTop="@dimen/_211pxv"
                  android:layout_width="wrap_content"
                  android:lineSpacingExtra="@dimen/_6pxh"
                  android:singleLine="true"
                  android:text="@string/lbl_lupa_password"
                  style="@style/txtPoppinsbold12" tools:text="@string/lbl_lupa_password"/>
        <TextView android:ellipsize="end" android:id="@+id/txtAtau"
                  android:layout_gravity="center_horizontal"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="@dimen/_26pxh"
                  android:layout_marginStart="@dimen/_26pxh"
                  android:layout_marginTop="@dimen/_3pxv"
                  android:layout_width="wrap_content"
                  android:lineSpacingExtra="@dimen/_5pxh"
                  android:singleLine="true" android:text="@string/lbl_atau"
                  style="@style/txtPoppinsbold10" tools:text="@string/lbl_atau"/>
        <TextView android:id="@+id/txtBelumPunyaAku"
                  android:layout_gravity="center_horizontal"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/_20pxv"
                  android:layout_marginEnd="@dimen/_26pxh"
                  android:layout_marginStart="@dimen/_26pxh"
                  android:layout_marginTop="@dimen/_6pxv"
                  android:layout_width="wrap_content"
                  android:lineSpacingExtra="@dimen/_10pxh"
                  android:text="@string/msg_belum_punya_aku"
                  style="@style/txtPoppinsbold12" tools:text="@string/msg_belum_punya_aku"/>
    </LinearLayout>
</layout>
