<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearForgetPassNum"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowOne"
            android:layout_height="@dimen/_2pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="@dimen/_15pxh"
            android:scaleType="fitXY" android:src="@drawable/img_arrow1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLupaPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/lbl_lupa_password2"
            style="@style/txtPoppinsbold24" tools:text="@string/lbl_lupa_password2"/>
        <TextView android:id="@+id/txtMasukkanemail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:text="@string/msg_masukkan_email2"
            style="@style/txtPoppinsregular12" tools:text="@string/msg_masukkan_email2"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_15"
            android:ellipsize="end"
            android:hint="@string/lbl_62_81354771356"
            android:id="@+id/etGroupFiftySix" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtResetdenganem"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/msg_reset_dengan_em"
            style="@style/txtPoppinsregular11" tools:text="@string/msg_reset_dengan_em"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnkirimkanKode"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_66pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_3">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnKirimkanKode"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_kirimkan_kode"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_kirimkan_kode"/>
        </LinearLayout>
    </LinearLayout>
</layout>
