<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearForgetPassNew"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowOne"
            android:layout_height="@dimen/_2pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="@dimen/_15pxh"
            android:scaleType="fitXY" android:src="@drawable/img_arrow1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtBuatKataSandi"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_buat_kata_sandi"
            style="@style/txtPoppinsbold24" tools:text="@string/msg_buat_kata_sandi"/>
        <TextView android:id="@+id/txtJagakeamanana"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:text="@string/msg_jaga_keamanan_a"
            style="@style/txtPoppinsregular13" tools:text="@string/msg_jaga_keamanan_a"/>
        <ImageView android:id="@+id/imageGroupFiftySix"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_48pxh"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="@dimen/_307pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group56"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group56"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtResetdenganem"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/msg_reset_dengan_em"
            style="@style/txtPoppinsregular11" tools:text="@string/msg_reset_dengan_em"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnaturUlangSandiOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_66pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_3">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnAturUlangSandiOne"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/msg_atur_ulang_sand"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/msg_atur_ulang_sand"/>
        </LinearLayout>
    </LinearLayout>
</layout>
